src/components/App/App.module.css
:root {
  --primary: #29A296;
  --primary-l1: #3BCEBF;
  --primary-l2: #6CDACF;
  --primary-l3: #BEEFEA;
  --primary-l4: #DEF7F4;
  --primary-l5: #EFFBFA;
  --gray: #292929;
  --gray-l1: #EBEBEB;
  --gray-l2: #D6D6D6;
  --red: #D92408;
  --white: #ffffff;
}

:global(body) {
  margin: 0;
  padding: 15px;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: var(--gray);
  height: 100%;
  overflow: hidden;
}

:global(html) {
  height: 100%;
}

:global(main) {
  max-width: 1800px;
  width: 100%;
  margin: 0 auto;
}

.multicheckbox {
  margin-right: 30px;
}

